--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,2 @@
-spring.cloud.config.server.git.uri=https://gitlab.com/alisherabuhabiba/config-server-demo
+spring.cloud.config.server.git.uri=https://github.com/alisherabuhabiba2202/ConfigServer
 spring.cloud.config.server.default-label=main
